--- a/kubedefs/appdeploy.yaml
+++ b/kubedefs/appdeploy.yaml
@@ -21,10 +21,16 @@ spec:
         ports:
         - name: vproapp-port
           containerPort: 8080
+
       initContainers:
       - name: init-mydb
         image: busybox
-        args: ['-c', 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
+        command: ["sh", "-c"]
+        args:
+          - 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;'
+
       - name: init-memcache
         image: busybox
-        args: ['-c', 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;']
+        command: ["sh", "-c"]
+        args:
+          - 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for memcache; sleep 2; done;'
