--- a/kubedefs/appdeploy.yaml
+++ b/kubedefs/appdeploy.yaml
@@ -14,6 +14,21 @@ spec:
       labels:
         app: vproapp
     spec:
+      initContainers:
+      - name: init-mydb
+        image: busybox:1.35
+        command:
+        - sh
+        - -c
+        - 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;'
+      
+      - name: init-memcache
+        image: busybox:1.35
+        command:
+        - sh
+        - -c
+        - 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for memcache; sleep 2; done;'
+      
       containers:
       - name: vproapp
         image: vprocontainers/vprofileapp
@@ -21,16 +36,3 @@ spec:
         ports:
         - name: vproapp-port
           containerPort: 8080
-
-      initContainers:
-      - name: init-mydb
-        image: busybox
-        command: ["sh", "-c"]
-        args:
-          - 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;'
-
-      - name: init-memcache
-        image: busybox
-        command: ["sh", "-c"]
-        args:
-          - 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for memcache; sleep 2; done;'
