--- a/kubedefs/appdeploy.yaml
+++ b/kubedefs/appdeploy.yaml
@@ -20,14 +20,14 @@ spec:
         command:
         - sh
         - -c
-        - 'until nslookup vprodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mydb; sleep 2; done;'
+        - 'until nc -z vprodb 3306; do echo waiting for mydb; sleep 2; done;'
       
       - name: init-memcache
         image: busybox:1.35
         command:
         - sh
         - -c
-        - 'until nslookup vprocache01.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for memcache; sleep 2; done;'
+        - 'until nc -z vprocache01 11211; do echo waiting for memcache; sleep 2; done;'
       
       containers:
       - name: vproapp
